fix for #51 - added case insensitivity to Documents enums (#52)
* fix for #51 - added case insensitivity to Documents enums

* fix for #51 - added case insensitivity to Documents enums

* fix for #51 - fix package.json config
